absolute url on 1 img

--- a/templates/email-templates/hello/html.hbs
+++ b/templates/email-templates/hello/html.hbs
@@ -28,7 +28,7 @@
         
             <div style="margin-left: 20px;margin-right: 20px;">
         <div style="font-size: 12px;font-style: normal;font-weight: normal;margin-bottom: 20px;" align="center">
-          <img style="border: 0;display: block;height: auto;width: 100%;max-width: 900px;" alt="" width="560" src="{{host}}/img/sport.jpg">
+          <img style="border: 0;display: block;height: auto;width: 100%;max-width: 900px;" alt="" width="560" src="https://html-mailer.herokuapp.com/img/sport.jpg">
         </div>
       </div>
         
