--- a/templates/email-templates/welcome/html.hbs
+++ b/templates/email-templates/welcome/html.hbs
@@ -14,7 +14,7 @@
       </div>
       
       <div style="margin: 0 auto;max-width: 600px;min-width: 320px;width: 320px;width: calc(28000% - 173000px);overflow-wrap: break-word;word-wrap: break-word;word-break: break-word;">
-        <div style="border-collapse: collapse;display: table;width: 100%;background-color: #307fb0;background-position: 0px 0px;background-image: url(https://proxy.imgsmail.ru?email=shikin.a.v%40mail.ru&amp;e=1478274072&amp;h=ofMJAo2_hULW_C0Ektm9Ew&amp;url171=aTEuY21haWwxOS5jb20vZWkvZC9ENy9EQkMvMUQ4LzAyNDA0My9jc2ZpbmFsL2ZpamktaGVybzEuanBn&amp;is_https=0);background-repeat: repeat;">
+        <div style="border-collapse: collapse;display: table;width: 100%;background-color: #307fb0;background-position: 0px 0px;background-image: url(https://html-mailer.herokuapp.com/img/palms.jpg);background-repeat: repeat;">
         
           <div style="text-align: left;color: #60666d;font-size: 14px;line-height: 21px;font-family: &quot;Open Sans&quot;,sans-serif;max-width: 600px;min-width: 320px;width: 320px;width: calc(28000% - 167400px);">
         
@@ -70,7 +70,7 @@
           
             <div style="margin-left: 20px;margin-right: 20px;margin-top: 24px;margin-bottom: 24px;">
         <div style="font-size: 12px;font-style: normal;font-weight: normal;" align="center">
-          <img style="border: 0;display: block;height: auto;width: 100%;max-width: 480px;" alt="" width="260" src="https://proxy.imgsmail.ru?email=shikin.a.v%40mail.ru&amp;e=1478274072&amp;h=7a-vLw3LBqrmUzs4GG6K9A&amp;url171=aTEuY21haWwxOS5jb20vZWkvZC9ENy9EQkMvMUQ4LzAyNDA0My9jc2ZpbmFsLzIxLmpwZw~~&amp;is_https=0">
+          <img style="border: 0;display: block;height: auto;width: 100%;max-width: 480px;" alt="" width="260" src="https://html-mailer.herokuapp.com/img/ocean1.jpg">
         </div>
       </div>
           
@@ -100,7 +100,7 @@
           
             <div style="margin-left: 20px;margin-right: 20px;margin-top: 24px;margin-bottom: 24px;">
         <div style="font-size: 12px;font-style: normal;font-weight: normal;" align="center">
-          <img style="border: 0;display: block;height: auto;width: 100%;max-width: 480px;" alt="" width="260" src="https://proxy.imgsmail.ru?email=shikin.a.v%40mail.ru&amp;e=1478274072&amp;h=iaR-uHQlx7Du-Ws9tiGLzA&amp;url171=aTIuY21haWwxOS5jb20vZWkvZC9ENy9EQkMvMUQ4LzAyNDA0My9jc2ZpbmFsLzExMS5qcGc~&amp;is_https=0">
+          <img style="border: 0;display: block;height: auto;width: 100%;max-width: 480px;" alt="" width="260" src="https://html-mailer.herokuapp.com/img/ocean2.jpg">
         </div>
       </div>
           
