cosmetic css /login

--- a/templates/views/login.hbs
+++ b/templates/views/login.hbs
@@ -22,24 +22,24 @@
         </div>
         <div class="container">
             <div class="row">
-            <div class="col-md-3 col-sm-0"></div>
-                <div class="col-md-6 col-sm-12">
-                    <h1>Введите данные для входа:</h1>
+            <div class="col-md-4 col-sm-0"></div>
+                <div class="col-md-4 col-sm-12">
+                    <h3>Введите данные для входа:</h3>
                     <!-- ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
-                    <div class="col-md-6 col-sm-12">
+                    
                            
                            <form>
-                                <input type="text" id="login" class="fullWidthInput">
-                                <input type="text" id="pass" class="fullWidthInput">
+                                <input type="text" id="login" class="fullWidthInput" placeholder="Введите логин">
+                                <input type="text" id="pass" class="fullWidthInput" placeholder="Введите пароль">
                                 <input id="btnLogin" type="button" value="Войти">  
                            </form>
 
                            <div id="responce"></div>
-                    </div>
+                    
                     <!-- ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
 
                 </div>
-                    <div class="col-md-3 col-sm-0"></div>
+                    <div class="col-md-4 col-sm-0"></div>
                 </div>
                 
         </div>
