--- a/static/css/style.css
+++ b/static/css/style.css
@@ -17,3 +17,10 @@ code {
 	width: 100%;
 	margin-bottom: 5px;
 }
+.status h5{
+	    font-size: 18px;
+}
+input#btnMailerGoSend {
+    font-weight: bold;
+    color: green;
+}
