--- a/templates/views/filesDeleted.hbs
+++ b/templates/views/filesDeleted.hbs
@@ -26,23 +26,16 @@
             <div class="row">
             <div class="col-md-3 col-sm-0"></div>
                 <div class="col-md-6 col-sm-12">
-                    <h1>База email адресов</h1> 
-                    <h4>Уникальных email-адресов в базе: {{emails_length}}</h4>
+                    <h1>Все файлы с адресами удалены</h1>  
+                    <a href="/emails">Загрузить файлы с адресами</a><br>
                     
-
                 </div>
                 <div class="col-md-3 col-sm-0"></div>
                 </div>
                 <div class="row">
                 <div class="col-md-3 col-sm-0"></div>
                 <div class="col-md-6 col-sm-12">
-                	<h4>Загрузка <b>.csv файлов</b> с email-адресами:</h4>
-                    <form action="/emails" enctype="multipart/form-data" method="post" >
-                        <input type="file" name="upload" multiple="multiple" id="uploadFile"><br>
-                        <input type="submit" name="uploadBtn" value="Загрузить файлы на сервер" id="uploadBtn">
-                    </form>
-                    <br>
-                        <input type="button" name="deleteBtn" value="Удалить все адреса из базы" id="deleteAllFilesBtn">
+                	<div class="templatePreview"></div>
                 </div>
                 <div class="col-md-3 col-sm-0"></div>
             </div>
