--- a/templates/views/filesUploaded.hbs
+++ b/templates/views/filesUploaded.hbs
@@ -2,8 +2,8 @@
     <head>
         <title>Email Рассылка</title>
         <meta charset="utf-8" />
-        <link href="{{host}}/css/style.css" rel="stylesheet" media="all">
-        <link href="{{host}}/lib/bootstrap.min.css" rel="stylesheet">
+        <link href="/css/style.css" rel="stylesheet" media="all">
+        <link href="/lib/bootstrap.min.css" rel="stylesheet">
 
         <style>
         </style>
@@ -45,9 +45,9 @@
             
         </div>
         <footer>
-            <script src="{{host}}/lib/jquery.min.js"></script>
-            <script src="{{host}}/js/front.js"></script>
-            <script src="{{host}}/lib/bootstrap.min.js"></script>
+            <script src="/lib/jquery.min.js"></script>
+            <script src="/js/front.js"></script>
+            <script src="/lib/bootstrap.min.js"></script>
         </footer>
     </body>
 </html>
