--- a/templates/views/filesDeleted.hbs
+++ b/templates/views/filesDeleted.hbs
@@ -33,8 +33,8 @@
             
         </div>
         <footer>
-            <script src="{{host}}/lib/jquery.min.js"></script>
-            <script src="{{host}}/js/front.js"></script>
-            <script src="{{host}}/lib/bootstrap.min.js"></script>
+            <script src="/lib/jquery.min.js"></script>
+            <script src="/js/front.js"></script>
+            <script src="/lib/bootstrap.min.js"></script>
         </footer>
     
