--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -30,7 +30,7 @@
                     <div class="col-md-6 col-sm-12">
                            <p>Шаблон письма:</p>
                            <p><select id="templatesMail">
-                                {{#each templatesMail}}
+                                {{#each mailTemplates}}
                                     <option value="{{this}}">{{this}}</option>
                                 {{/each}}
                            </select></p>
