show num of sended mails

--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -58,9 +58,11 @@
                            </form>
                     </div>
                     <!-- ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
-                    <div class="col-md-6 col-sm-12">
-                           
-                           <div class="status"><h5>Статус рассылки: <br><span class="statusText">{{mailerStatus}}</span></h5></div>
+                    <div class="col-md-6 col-sm-12"> 
+                        <div class="status">
+                            <p>Статус рассылки: </p>
+                            <b class="statusText">{{mailerStatus}}</b>
+                        </div>
                     </div>
                     <div class="col-md-6 col-sm-12">
                            <p>От кого:</p>
