--- a/templates/views/send.hbs
+++ b/templates/views/send.hbs
@@ -1,1 +1,2 @@
-<h5>Статус рассылки: <br><span class="statusText">{{mailerStatus}}</span></h5>
+  <p>Статус рассылки: </p>
+  <b class="statusText">{{mailerStatus}}</b>
