pass params to email templates

--- a/templates/email-templates/hello/html.hbs
+++ b/templates/email-templates/hello/html.hbs
@@ -37,11 +37,13 @@
     </div>
         <hr style="border-top: 1px solid #eee; ">
             <div style="margin-left: 20px;margin-right: 20px;">
-      <h2 style="margin-top: 0;margin-bottom: 0;font-style: normal;font-weight: normal;color: #706f70;font-size: 18px;line-height: 26px;font-family: Cabin,Avenir,sans-serif;text-align: center;"><strong>Какой либо текст</strong></h2><p style="margin-top: 16px;margin-bottom: 20px;">Hi as a valued member of our PowerGym community, we’d love your feedback on how to further improve your fitness experience in our new expansion project. What equipment do you use the most? What new classes could you benefit from? Please fill out this quick survey to help shape our new remodel.</p>
+      <h2 style="margin-top: 0;margin-bottom: 0;font-style: normal;font-weight: normal;color: #706f70;font-size: 18px;line-height: 26px;font-family: Cabin,Avenir,sans-serif;text-align: center;">
+        <strong>Какой либо текст</strong></h2>
+        <p style="margin-top: 16px;margin-bottom: 20px;">Hi {{fio}} as a valued {{role}} of {{organization}} our PowerGym community, we’d love your feedback on how to further improve your fitness experience in our new expansion project. What equipment do you use the most? What new classes could you benefit from? Please fill out this quick survey to help shape our new remodel.</p>
     </div>
     <hr style="border-top: 1px solid #eee; ">
     <div style="margin-left: 20px;margin-right: 20px;">
-      <p style="margin-top: 16px;margin-bottom: 20px;">Hi as a valued member of our PowerGym community, we’d love your feedback on how to further improve your fitness experience in our new expansion project. What equipment do you use the most? What new classes could you benefit from? Please fill out this quick survey to help shape our new remodel.</p>
+      <p style="margin-top: 16px;margin-bottom: 20px;">Hi  as a valued member of our PowerGym community, we’d love your feedback on how to further improve your fitness experience in our new expansion project. What equipment do you use the most? What new classes could you benefit from? Please fill out this quick survey to help shape our new remodel.</p>
     </div>
         
             <div style="margin-left: 20px;margin-right: 20px;">
