--- a/templates/email-templates/welcome/html.hbs
+++ b/templates/email-templates/welcome/html.hbs
@@ -23,7 +23,9 @@
     </div>
         
             <div style="margin-left: 20px;margin-right: 20px;">
-      <h1 style="margin-top: 0;margin-bottom: 0;font-style: normal;font-weight: normal;color: #44a8c7;font-size: 32px;line-height: 40px;font-family: Cabin,Avenir,sans-serif;text-align: center;"><span style="color:#ffffff"><strong>Пример HTML-письма</strong></span></h1><h3 style="margin-top: 20px;margin-bottom: 12px;font-style: normal;font-weight: normal;color: #44a8c7;font-size: 17px;line-height: 26px;text-align: center;"><font color="#ffffff">Какой либо текст</font></h3>
+      <h1 style="margin-top: 0;margin-bottom: 0;font-style: normal;font-weight: normal;color: #44a8c7;font-size: 32px;line-height: 40px;font-family: Cabin,Avenir,sans-serif;text-align: center;"><span style="color:#ffffff"><strong>Пример HTML-письма</strong></span></h1><h3 style="margin-top: 20px;margin-bottom: 12px;font-style: normal;font-weight: normal;color: #44a8c7;font-size: 17px;line-height: 26px;text-align: center;">
+        <font color="#ffffff">Какой либо текст для {{fio}} как {{role}} в {{organization}} </font>
+        </h3>
     </div>
         
             <div style="margin-left: 20px;margin-right: 20px;">
